--- a/examples/app-manifests.yml
+++ b/examples/app-manifests.yml
@@ -1,13 +1,16 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: manifests
+  name: os-manifests
   namespace: argocd
 spec:
   destination:
-    namespace: default
+    namespace: os
     server: https://kubernetes.default.svc
   project: default
   source:
     path: examples/manifests
-    repoURL: https://github.com/ondrejsika/argocd-training.git
+    repoURL: https://gitlab.sikademo.com/argocd/os.git
+  syncPolicy:
+    syncOptions:
+      - CreateNamespace=true
