--- a/examples/app-manifests_v2.yml
+++ b/examples/app-manifests_v2.yml
@@ -16,4 +16,4 @@ spec:
       - CreateNamespace=true
   source:
     path: examples/manifests
-    repoURL: https://github.com/ondrejsika/argocd-training.git
+    repoURL: https://gitlab.sikademo.com/argocd/os.git
