--- a/examples/job/app-of-apps.yml
+++ b/examples/job/app-of-apps.yml
@@ -12,7 +12,7 @@ spec:
   project: default
   source:
     path: examples/job/apps
-    repoURL: https://github.com/ondrejsika/argocd-training.git
+    repoURL: https://gitlab.sikademo.com/argocd/os.git
     targetRevision: master
   syncPolicy:
     automated:
