--- a/repo-https.yml
+++ b/repo-https.yml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: example-priv-https
+  name: os
   namespace: argocd
   labels:
     argocd.argoproj.io/secret-type: repository
 stringData:
   project: default
   type: git
-  url: https://gitlab.sikademo.com/ondrejsika/private.git
-  username: ondrejsika
-  password: zt1a4d_BJwNLcWKDf7vF
+  url: https://gitlab.sikademo.com/argocd/os.git
+  username: demo-user
+  password: asdfasdf
