--- a/examples/app-manifests.yml
+++ b/examples/app-manifests.yml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: os-manifests2
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
     namespace: os2
@@ -16,4 +18,4 @@ spec:
       - CreateNamespace=true
     automated:
       prune: true
-      selfHeal: false
+      selfHeal: true
