--- a/examples/helm_from_package.yml
+++ b/examples/helm_from_package.yml
@@ -1,14 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: helm-from-package
+  name: os-helm-from-package
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
   destination:
-    namespace: examples
+    namespace: os3
     server: https://kubernetes.default.svc
   syncPolicy:
     automated:
@@ -19,8 +19,7 @@ spec:
   source:
     repoURL: https://helm.sikalabs.io
     chart: hello-world
-    targetRevision: 0.3.0
+    targetRevision: 0.9.0
     helm:
-      releaseName: helm-from-package
-      values: |
-        replicas: 3
+      valuesObject:
+        replicas: 2
