--- a/examples/sync-waves/apps/c.yml
+++ b/examples/sync-waves/apps/c.yml
@@ -1,13 +1,15 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: os-hello-b
+  name: os-hello-c
   namespace: argocd
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: os-sync-waves-example
+    namespace: sync-waves-example
     server: https://kubernetes.default.svc
   project: default
   source:
