--- a/appproj-foo.yml
+++ b/appproj-foo.yml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
-  name: foo
+  name: os-foo
   namespace: argocd
 spec:
   clusterResourceWhitelist:
