--- a/argocd-app-bar.yml
+++ b/argocd-app-bar.yml
@@ -1,16 +1,16 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: bar
+  name: os-bar
   namespace: argocd
 spec:
   destination:
-    namespace: bar
+    namespace: os-bar
     server: https://kubernetes.default.svc
-  project: bar
+  project: os-bar
   source:
-    path: .
-    repoURL: https://github.com/argocd-training/example-1.git
+    path: examples/manifests
+    repoURL: https://gitlab.sikademo.com/argocd/os.git
   syncPolicy:
     automated:
       prune: true
