--- a/examples/appset.yml
+++ b/examples/appset.yml
@@ -16,6 +16,9 @@ spec:
       - name: baz
         replicas: "3"
         text: BAZ!
+      - name: ahoj
+        replicas: "3"
+        text: Ahoh Svete!
   template:
     metadata:
       name: appset-{{name}}
@@ -34,7 +37,7 @@ spec:
       source:
         repoURL: https://helm.sikalabs.io
         chart: hello-world
-        targetRevision: 0.6.0
+        targetRevision: 0.9.0
         helm:
           releaseName: '{{name}}'
           values: |
