--- a/examples/image_updater/helm_public.yml
+++ b/examples/image_updater/helm_public.yml
@@ -4,11 +4,11 @@ metadata:
   name: hello-world-helm-image-updater-public
   namespace: argocd
   annotations:
-    argocd-image-updater.argoproj.io/image-list: 1=ttl.sh/image-updater-example:latest
-    argocd-image-updater.argoproj.io/1.helm.image-spec: image
-    argocd-image-updater.argoproj.io/1.update-strategy: digest
-    argocd-image-updater.argoproj.io/1.force-update: 'true'
-    argocd-image-updater.argoproj.io/1.platforms: linux/amd64
+    argocd-image-updater.argoproj.io/image-list: app=ttl.sh/image-updater-example:latest
+    argocd-image-updater.argoproj.io/app.helm.image-spec: image
+    argocd-image-updater.argoproj.io/app.update-strategy: digest
+    argocd-image-updater.argoproj.io/app.force-update: 'true'
+    argocd-image-updater.argoproj.io/app.platforms: linux/amd64
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
@@ -21,8 +21,7 @@ spec:
     targetRevision: HEAD
     path: charts/one-image
     helm:
-      releaseName: hello-world-helm-image-updater-public
-      values: |
+      valuesObject:
         host: hello-world-helm-image-updater-public.k8s.sikademo.com
         image: ttl.sh/image-updater-example
   syncPolicy:
